--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -176,25 +176,17 @@ eleventyNavigation:
       });
     });
 
-    // function highlightStars(rating) {
-    //   stars.forEach(star => {
-    //     const starRating = parseInt(star.getAttribute('data-rating'));
-    //     if (starRating <= rating) {
-    //       star.classList.add('hover');
-    //     } else {
-    //       star.classList.remove('hover');
-    //     }
-    //   });
-    // }
-
-
     function highlightStars(rating) {
-    stars.forEach(star => {
+      stars.forEach(star => {
         const starRating = parseInt(star.getAttribute('data-rating'));
-        star.classList.toggle('selected', starRating <= rating);
-        star.classList.toggle('hover', starRating <= rating);
-    });
+        if (starRating <= rating) {
+          star.classList.add('hover');
+        } else {
+          star.classList.remove('hover');
+        }
+      });
     }
+
 
     function sendFeedback() {
       const message = document.querySelector('#badFeedback textarea').value.trim();
