--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -165,6 +165,15 @@ eleventyNavigation:
         const rating = parseInt(star.getAttribute('data-rating'));
         stars.forEach(s => s.classList.remove('selected'));
         star.classList.add('selected');
+        forEach(star => {
+            const starRating = parseInt(star.getAttribute('data-rating'));
+            if (starRating <= rating) {
+            star.classList.add('selected');
+            } else {
+            star.classList.remove('selected');
+            }
+        })
+
 
         if (rating >= 4) {
           goodFeedback.style.display = 'block';
@@ -173,11 +182,7 @@ eleventyNavigation:
           goodFeedback.style.display = 'none';
           badFeedback.style.display = 'block';
         }
-        if (starRating <= rating) {
-          star.classList.add('selected');
-        } else {
-          star.classList.remove('selected');
-        }
+
 
       });
     });
