--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -141,7 +141,7 @@ eleventyNavigation:
     </div>
 
     <div class="powered">
-      Powered by <a href="https://bespokewebdesignedmonton.com" target="_blank">Bespoke Web Design Edmonton</a>
+      Powered by <a href="https://bespokewebdesign.ca/" target="_blank">Bespoke Web Design Edmonton</a>
     </div>
   </div>
 
