--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -1,11 +1,8 @@
 ---
-title: 'Review| Montano Plumbing & Contracting LTD.'
+title: 'Review | Montano Plumbing & Contracting LTD.'
 description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'review/'
-eleventyNavigation:
-    key: Review
-    order: 600
 ---
 
 {% extends "layouts/base.html" %}
@@ -55,6 +52,9 @@ eleventyNavigation:
       color: #ccc;
       transition: color 0.3s ease;
     }
+    .star{
+        font-size: 3.5rem;
+    }
     .star:hover,
     .star.hover,
     .star.selected {
@@ -103,7 +103,6 @@ eleventyNavigation:
   </style>
 
   <div class="review-container">
-    <img src="/assets/images/MPCLogo11.png" alt="MPC Logo" class="review-logo" />
     <h1 class="review-h1">Thank You for Choosing Montano Plumbing & Contracting</h1>
     <p class="review-subheader">
       We’re grateful you trusted us with your plumbing and contracting needs. Please take a moment to rate your experience.
@@ -174,8 +173,11 @@ eleventyNavigation:
             }
         })
 
-
-        if (rating >= 4) {
+        if(!rating){
+          goodFeedback.style.display = 'none';
+          badFeedback.style.display = 'none';
+        }
+        else if (rating >= 4) {
           goodFeedback.style.display = 'block';
           badFeedback.style.display = 'none';
         } else {
