--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -8,7 +8,7 @@ permalink: 'review/'
 {% extends "layouts/base.html" %}
 
 {% block head %}
-        <link rel="stylesheet" href="/assets/css/review.css">
+        <link rel="stylesheet" href="https://montanoplumbing.ca/assets/css/review.css/">
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
         <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
