--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -10,7 +10,7 @@ permalink: 'review/'
 {% block head %}
         <link rel="stylesheet" href="https://montanoplumbing.ca/assets/css/review.css/">
 
-        <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
+        <meta property="og:url" content="{{ client.domain }}{{ page.url }}/review"/>
         <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
         <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
 {% endblock %}
