--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -62,7 +62,7 @@ eleventyNavigation:
 <!--                   Contact                    -->
 <!-- ============================================ -->
 
-<section id="contact-1750">
+<section id="contact-1750" style="max-width: 85rem; margin: auto;">
     <div class="cs-container">
         <div class="cs-form-group">
             <div class="cs-content">
