fence & deck gallery update

--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -90,8 +90,8 @@ eleventyNavigation:
                 </p>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/fence.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/fence.jpg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/fence.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/fence.jpg">
                     <img decoding="async" src="/assets/images/fence.jpg" alt="construction" width="413" height="374" aria-hidden="true">
                 </picture>
             </li>
@@ -103,9 +103,9 @@ eleventyNavigation:
                     </p>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/deck.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/deck.jpg">
-                    <img decoding="async" src="/assets/images/deck.jpg" alt="construction" width="413" height="374" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/deck.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/deck.jpg">
+                    <img decoding="async" src="/assets/images/fence/deck.jpg" alt="construction" width="413" height="374" aria-hidden="true">
                 </picture>
             </li>
         </ul>
@@ -137,76 +137,76 @@ eleventyNavigation:
             <div class="cs-row cs-row-1">
                 <!-- Row 1-->
                 <picture class="cs-picture cs-picture-1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gal1.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal1.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal1.jpg" alt="new hallway" width="420" height="567">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery1.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery1.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery1.jpg" alt="new hallway" width="420" height="567">
                 </picture>
                 <picture class="cs-picture cs-picture-2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gal2.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal2.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal2.jpg" alt="new home construction" width="420" height="630">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery2.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery2.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery2.jpg" alt="new home construction" width="420" height="630">
                 </picture>
                 <picture class="cs-picture cs-picture-3">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gal3.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal3.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal3.jpg" alt="building a new wall" width="420" height="512">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery3.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery3.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery3.jpg" alt="building a new wall" width="420" height="512">
                 </picture>
                 <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
             </div>
             <!-- Row 2 -->
             <div class="cs-row cs-row-2">
                 <picture class="cs-picture cs-picture-1">
-                    <source media="(min-width: 600px)" srcset="/assets/images/gal4.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal4.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal4.jpg" alt="new kitchen" width="420" height="492">
+                    <source media="(min-width: 600px)" srcset="/assets/images/fence/gallery4.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery4.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery4.jpg" alt="new kitchen" width="420" height="492">
                 </picture>
                 <picture class="cs-picture cs-picture-2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gal5.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal5.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal5.jpg" alt="apartment addition" width="420" height="517">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery5.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery5.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery5.jpg" alt="apartment addition" width="420" height="517">
                 </picture>
                 <picture class="cs-picture cs-picture-3">
-                    <source media="(max-width: 600px)" srcset="/assets/images/10.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/10.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/10.jpg" alt="kew kitchen cabinets" width="420" height="629">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery6.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery6.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery6.jpg" alt="kew kitchen cabinets" width="420" height="629">
                 </picture>
                 <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
             </div>
             <!-- Row 3 -->
             <div class="cs-row cs-row-3">
                 <picture class="cs-picture cs-picture-1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gal7.webp">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal7.webp">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal7.webp" alt="new black window structure" width="420" height="625">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery7.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery7.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery7.jpg" alt="new black window structure" width="420" height="625">
                 </picture>
                 <picture class="cs-picture cs-picture-2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gal8.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal8.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal8.jpg" alt="kitchen rebovation" width="420" height="452">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery8.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery8.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery8.jpg" alt="kitchen rebovation" width="420" height="452">
                 </picture>
                 <picture class="cs-picture cs-picture-3">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gal9.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal9.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal9.jpg" alt="bathroom renovation" width="420" height="629">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/fence.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/fence.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/fence.jpg" alt="bathroom renovation" width="420" height="629">
                 </picture>
                 <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
             </div>
                <!-- Row 4-->
                <div class="cs-row cs-row-3">
                 <picture class="cs-picture cs-picture-1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/11.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/11.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/11.jpg" alt="new black window structure" width="420" height="625">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery9.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery9.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery9.jpg" alt="new black window structure" width="420" height="625">
                 </picture>
                 <picture class="cs-picture cs-picture-2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/12.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/12.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/12.jpg" alt="kitchen rebovation" width="420" height="452">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/gallery10.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/gallery10.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/gallery10.jpg" alt="kitchen rebovation" width="420" height="452">
                 </picture>
                 <picture class="cs-picture cs-picture-3">
-                    <source media="(max-width: 600px)" srcset="/assets/images/13.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/13.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/13.jpg" alt="bathroom renovation" width="420" height="629">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence/deck.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence/deck.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/fence/deck.jpg" alt="bathroom renovation" width="420" height="629">
                 </picture>
                 <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
             </div>
