--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -61,7 +61,7 @@ eleventyNavigation:
    <!-- ============================================ -->
 <!--                   Contact                    -->
 <!-- ============================================ -->
-
+<!-- Added inline css, contact.css/contact.less not updating -->
 <section id="contact-1750" style="max-width: 85rem; margin: auto;">
     <div class="cs-container">
         <div class="cs-form-group">
