update fence deck info

--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -75,7 +75,7 @@ eleventyNavigation:
                 <h2 class="cs-title">Professional Fence and Deck Installation</h2>
             </div>
             <p class="cs-text">
-                Expert fence and deck installation services designed to elevate your outdoor space. Whether you're enhancing your home’s curb appeal or adding functionality to your business, we deliver top-tier craftsmanship and customized solutions that exceed expectations.
+                Expert fence and deck installation services designed to elevate your outdoor space. Whether you're enhancing your home’s curb appeal or adding functionality, we deliver top-tier craftsmanship and customized solutions that exceed expectations.
             </p>
         </div>
 
