--- a/src/content/pages/financing.html
+++ b/src/content/pages/financing.html
@@ -13,9 +13,10 @@ permalink: 'financing/'
     <link rel="stylesheet" href="/assets/css/renovation.css">
     <link rel="stylesheet" href="/assets/css/fence-deck.css">
 
-        <meta property="og:url" content="https://www.financeit.ca/en/direct/payment-plan/YT0yNzEzNTcmbD0mcD1QemIwb1duaDZNemhEa3hkSTQ5Z1R3JnM9MCZ2PTE=/apply?slug=PBTFXw"/>
+        <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
         <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
         <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
+        <meta http-equiv="refresh" content="1" url="https://www.financeit.ca/en/direct/payment-plan/YT0yNzEzNTcmbD0mcD1QemIwb1duaDZNemhEa3hkSTQ5Z1R3JnM9MCZ2PTE=/apply?slug=PBTFXw">
 {% endblock %}
 
 {% block body %}
