--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -16,8 +16,8 @@ eleventyNavigation:
     <link rel="stylesheet" href="/assets/css/fence-deck.css">
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
-        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
-        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
+        <meta property="og:image" content="{{ site.url }}/assets/images/fence-og.jpg"/>
+        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/fence-og.jpg"/>
 {% endblock %}
 
 {% block body %}
