--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 ---
-title: 'Montano Plumbing & Contracting LTD.'
-description: 'Your Trusted Partner for Renovations and Plumbing'
+title: 'Squad V Plumbing Inc. | Reliable Residential, Commercial & Construction Plumbing in Edmonton'
+description: 'Professional plumbing, gasfitting, renovations, water heater installation, and new construction services. 7+ years trusted by Edmonton homeowners, builders, and property managers. Fast, honest, flexible service. Call now: (780) 667-7169.'
+keywords: 'Edmonton plumber, Edmonton plumbing company, water heater Edmonton, tankless installation Edmonton, plumbing renovation Edmonton, commercial plumbing Edmonton, construction plumbing Edmonton, certified gasfitter Edmonton'
 preloadImg: '/assets/images/landing.webp'
 permalink: '/'
 tags: 'sitemap' # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
