chore: optimization for css to properly use critical css

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@ eleventyNavigation:
 
 
 
-<body>
+<!-- <body> -->
 
 <section class="canada-banner">
     <div class="cs-container">
@@ -203,7 +203,7 @@ eleventyNavigation:
         });
         </script>
 
-</body>
+<!-- </body> -->
 
 
 
@@ -747,22 +747,5 @@ Our team is committed to delivering high-quality craftsmanship that brings comfo
           </ul>
 
       </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     {% include 'components/cta.html' %}
 {% endblock %}
