chore: initial design for hero with services cards

--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,44 @@ eleventyNavigation:
                     <a href="tel:780-667-7169" class="btn btn-secondary squircle">Call (780) 667-7169</a>
                 </div>
             </div>
+
+            <div class="hero-cards">
+                <!-- Card 1: Plumbing -->
+                <a href="/plumbing-and-heating/" class="hero-card">
+                    <div class="card-icon">🪠</div>
+                    <div class="card-info">
+                        <h3 class="card-title">Plumbing</h3>
+                        <p class="card-desc">Reliable solutions for leaks, fixtures, and long-lasting results.</p>
+                    </div>
+                </a>
+
+                <!-- Card 2: Heating -->
+                <a href="/plumbing-and-heating/" class="hero-card">
+                    <div class="card-icon">🔥</div>
+                    <div class="card-info">
+                        <h3 class="card-title">Heating</h3>
+                        <p class="card-desc">Furnace repairs and installations to keep your home warm.</p>
+                    </div>
+                </a>
+
+                <!-- Card 3: Gasfitting -->
+                <a href="/plumbing-and-heating/" class="hero-card">
+                    <div class="card-icon">⛽</div>
+                    <div class="card-info">
+                        <h3 class="card-title">Gasfitting</h3>
+                        <p class="card-desc">Certified lines for BBQs, ranges, and gas appliances.</p>
+                    </div>
+                </a>
+
+                <!-- Card 4: Renovation -->
+                <a href="/renovation/" class="hero-card">
+                    <div class="card-icon">🔨</div>
+                    <div class="card-info">
+                        <h3 class="card-title">Renovation</h3>
+                        <p class="card-desc">Transform your kitchen, bath, or basement with expert builds.</p>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 
